--- a/nginx.conf
+++ b/nginx.conf
@@ -2,10 +2,12 @@ events { }
 
 http {
     upstream backend {
+        server landing5:80;
         server landing1:80;
         server landing2:80;
         server landing3:80;
         server landing4:80;
+        server landing5:80;
     }
 
     server {
