--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,6 +21,11 @@ services:
     networks:
       - traffic-net
 
+  landing5:
+    build: ./landing
+    networks:
+      - traffic-net
+
   nginx:
     image: nginx:alpine
     ports:
@@ -30,6 +35,7 @@ services:
     networks:
       - traffic-net
     depends_on:
+      - landing5
       - landing1
       - landing2
       - landing3
@@ -43,6 +49,7 @@ services:
     networks:
       - traffic-net
     depends_on:
+      - landing5
       - nginx
 
   prometheus:
